--- a/projects.html
+++ b/projects.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Wesley's Portfolio</title>
+    <style> hr { border: none; height: 0px; } </style>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="nav.css">
-    <link rel="stylesheet" href="me.css">
+    <link rel="stylesheet" href="project.css">
     <link rel="stylesheet" href="footer.css">
 </head>
 <body>
@@ -22,6 +23,81 @@
             </ul>
         </section>
     </nav>
+    <project>
+        <div class="grid-container">
+            <div class="grid-item">
+                <section>
+                    <h1>HTML, CSS, JavaScript | Individual Project</h1>
+                    <h2>Blackjack</h2>
+                    <p>WIP
+                        <br><br>Started in: September 2024<br>Last updated: September 2024</br></br></br></p>
+                </section>
+            </div>
+            <div class="grid-item">
+                <img src="blackjack.png" alt="Link to App">
+            </div>
+        </div>
+    </project>
+    <hr>
+    <project>
+        <div class="grid-container">
+            <div class="grid-item">
+                <section>
+                    <h1>HTML, CSS, JavaScript | Individual Project</h1>
+                    <h2>Minesweeper</h2>
+                    <p>WIP
+                        <br><br>Started in: September 2024<br>Last updated: September 2024</br></br></br></p>
+                </section>
+            </div>
+            <div class="grid-item">
+                <img src="minesweeper.png" alt="Link to App">
+            </div>
+        </div>
+    </project>
+    <hr>
+    <project>
+        <div class="grid-container">
+            <div class="grid-item">
+                <section>
+                    <h1>HTML, CSS, JavaScript<br>Individual Project</br></h1>
+                    <h2>Chess</h2>
+                    <p>This was a project I made back in high school, where I wanted to challenge myself with a harder project.
+                        I then fell in love with the game of chess and decided, might as well try to make one.
+                        It is a 1v1 chess game, so bring a friend, and can detect everything, like checks, and where they can move.
+                        However, for checkmate, it is a WIP, but as of right now, no one can move pieces if that happens.
+                        <br><br>Started in: May 2023<br>Last updated: June 2023</br></br></br></p>
+                </section>
+            </div>
+            <div class="grid-item">
+                <a href="https://github.com/Wesley25Pang05/chess2023" target="_blank">
+                    <img src="chess.png" alt="Link to App">
+                </a>
+            </div>
+        </div>
+    </project>
+    <hr>
+    <project>
+        <div class="grid-container">
+            <div class="grid-item">
+                <section>
+                    <h1>Java with JDA, a discord API<br>Individual Project</br></h1>
+                    <h2>Wordle on Discord</h2>
+                    <p>When wordle started becoming popular, I decided to try and make wordle as my first project.
+                        I also then realized I didn't want to play this myself, so I introduced it into some discord servers
+                        for multiple players to play and help each other in a wordle game. To start, you add a bot to your
+                        server, run the code with the bot using the API Key, then use the commands, play wordle, guess "word"
+                        <br><br>Started in: May 2022<br>Last updated: September 2024</br></br></br></p>
+                </section>
+            </div>
+            <div class="grid-item">
+                <a href="https://github.com/Wesley25Pang05/wordleDiscordJDA" target="_blank">
+                    <img src="wordle.png" alt="Link to App">
+                </a>
+            </div>
+        </div>
+    </project>
+    <hr>
+
 </body>
 <footer class="footer">
     <div class="social-icons">
