--- a/journey.html
+++ b/journey.html
@@ -6,6 +6,7 @@
     <title> Wesley's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="me.css">
     <link rel="stylesheet" href="footer.css">
 </head>
 <body>
@@ -25,19 +26,19 @@
 <footer class="footer">
     <div class="social-icons">
         <a href="https://discord.gg/MVd8chaYQt" target="_blank">
-                <img src="footerImages/discord.png" alt="Discord"/>
+                <img src="imgs/discord.png" alt="Discord"/>
         </a>
         <a href="https://www.instagram.com/wesley25pang05/" target="_blank">
-            <img src="footerImages/instagram.png" alt="Instagram"/>
+            <img src="imgs/instagram.png" alt="Instagram"/>
         </a>
         <a href="mailto:wesley25pang05@gmail.com" target="_blank">
-            <img src="footerImages/gmail.png" alt="Gmail"/>
+            <img src="imgs/gmail.png" alt="Gmail"/>
         </a>
         <a href="https://github.com/Wesley25Pang05" target="_blank">
-            <img src="footerImages/github.png" alt="Github"/>
+            <img src="imgs/github.png" alt="Github"/>
         </a>
         <a href="https://www.linkedin.com/in/wesley-pang-10695a2b3/" target="_blank">
-            <img src="footerImages/linkedin.png" alt="Linkedin"/>
+            <img src="imgs/linkedin.png" alt="Linkedin"/>
         </a>
     </div>
     <p>&copy; 2024 Wesley Pang<br>All rights reserved.</p>
