--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
                 </section>
             </div>
             <div class="grid-item">
-                <img src="blackjack.png" alt="Link to App">
+                <img src="imgs/blackjack.png" alt="Link to App">
             </div>
         </div>
     </project>
@@ -50,7 +50,9 @@
                 </section>
             </div>
             <div class="grid-item">
-                <img src="minesweeper.png" alt="Link to App">
+                <a href="https://github.com/Wesley25Pang05/customMinesweeperBoards" target="_blank">
+                    <img src="imgs/minesweeper.png" alt="Link to App">
+                </a>
             </div>
         </div>
     </project>
@@ -70,7 +72,7 @@
             </div>
             <div class="grid-item">
                 <a href="https://github.com/Wesley25Pang05/chess2023" target="_blank">
-                    <img src="chess.png" alt="Link to App">
+                    <img src="imgs/chess.png" alt="Link to App">
                 </a>
             </div>
         </div>
@@ -91,7 +93,7 @@
             </div>
             <div class="grid-item">
                 <a href="https://github.com/Wesley25Pang05/wordleDiscordJDA" target="_blank">
-                    <img src="wordle.png" alt="Link to App">
+                    <img src="imgs/wordle.png" alt="Link to App">
                 </a>
             </div>
         </div>
@@ -102,19 +104,19 @@
 <footer class="footer">
     <div class="social-icons">
         <a href="https://discord.gg/MVd8chaYQt" target="_blank">
-                <img src="footerImages/discord.png" alt="Discord"/>
+                <img src="imgs/discord.png" alt="Discord"/>
         </a>
         <a href="https://www.instagram.com/wesley25pang05/" target="_blank">
-            <img src="footerImages/instagram.png" alt="Instagram"/>
+            <img src="imgs/instagram.png" alt="Instagram"/>
         </a>
         <a href="mailto:wesley25pang05@gmail.com" target="_blank">
-            <img src="footerImages/gmail.png" alt="Gmail"/>
+            <img src="imgs/gmail.png" alt="Gmail"/>
         </a>
         <a href="https://github.com/Wesley25Pang05" target="_blank">
-            <img src="footerImages/github.png" alt="Github"/>
+            <img src="imgs/github.png" alt="Github"/>
         </a>
         <a href="https://www.linkedin.com/in/wesley-pang-10695a2b3/" target="_blank">
-            <img src="footerImages/linkedin.png" alt="Linkedin"/>
+            <img src="imgs/linkedin.png" alt="Linkedin"/>
         </a>
     </div>
     <p>&copy; 2024 Wesley Pang<br>All rights reserved.</p>
